--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "remove-demo": "babel-node tools/removeDemo.js",
     "start-message": "babel-node tools/startMessage.js",
     "prestart": "npm-run-all --parallel start-message",
-    "start": "npm-run-all --parallel test:watch open:src lint:watch",
+    "start": "npm-run-all --parallel test:watch open:src",
     "open:src": "babel-node tools/srcServer.js",
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* src tools --color",
@@ -32,6 +32,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-es2015": "6.24.0",
+    "history": "4.7.2",
     "object-assign": "4.1.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
